# special_token_json2binidx_tool

./: CLAUDE.md  README.ja.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.serena/: project.yml
tools/: preprocess_data.py  preprocess_ssg_protocol_data.py  tokenizer.py  train_sentencepiece.py
