[project]
name = "special-token-json2binidx-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ftfy<6.2.0",
    "lm-dataformat==0.0.20",
    "numpy<1.25.0",
    "sentencepiece>=0.2.1",
    "tokenizers<0.14.0",
    "torch<2.1.0",
    "tqdm<4.66.0",
]
